appId: com.danhvip2k4.mobileapp
---
# TC-1.3: Xem thông tin hồ sơ cá nhân
- launchApp
- tapOn: "Profile"
- assertVisible: ".*Body Metrics.*|.*Chỉ số cơ thể.*"
- scrollUntilVisible:
    element: ".*Personal Data.*|.*Dữ liệu cá nhân.*"
    direction: DOWN
    timeout: 10000
- assertVisible: ".*Personal Data.*|.*Dữ liệu cá nhân.*"
