appId: com.danhvip2k4.mobileapp
---
# TC-5.3: Nghe nhạc ngủ (Sleep Music)
- launchApp
- tapOn: "Home"
- tapOn: "Sleep, 8h Goal"
- tapOn: ".*Music.*|.*Nhạc.*"
- assertVisible: ".*Music.*|.*Nhạc.*"
- tapOn:
    index: 0 # Chọn bài nhạc đầu tiên
- assertVisible: ".*Playing.*|.*Đang phát.*|.*Pause.*"
